[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Tanks/Spritesheet/onlyObjects_default.png" type="Texture" id=1]
[ext_resource path="res://Assets/People/PNG/weapon_silencer.png" type="Texture" id=2]
[ext_resource path="res://Weapons/Weapon.gd" type="Script" id=3]
[ext_resource path="res://Bullet/Bullet.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=2]
resource_name = "muzzle_flash"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon/MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapon/MuzzleFlash:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.4, 0.8 ) ]
}

[node name="Weapon" type="Node2D"]
script = ExtResource( 3 )
Bullet = ExtResource( 4 )

[node name="GunMuzzle" type="Position2D" parent="."]
position = Vector2( 13, 0 )

[node name="Gun" type="Position2D" parent="."]
position = Vector2( 2, 0 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="MuzzleFlash" type="Sprite" parent="."]
visible = false
position = Vector2( 24, 9.53674e-07 )
rotation = -1.5708
scale = Vector2( 0.4, 0.8 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 324, 334, 20, 25 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
anims/muzzle_flash = SubResource( 2 )

[node name="GunSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
